# tropos-shrad

./: .gitignore  pyproject.toml
src/shrad/: __init__.py  click.py  futils.py  utils.py
src/shrad/conf/: shrad_config.json
src/shrad/share/: AngularResponse_GUVis3511_SN351_140129.csv  CosineCorrection_GUVis3511_SN351_140129.csv  shrad_calibrations.json  shrad_cfmeta.json
